welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:18: error: not found: value fairedelamerde
	fairedelamerde
        ^